# cppqsolve

./: CMakeLists.txt  CassandraDatabase.hpp  Config.h.in  Context.cpp  Context.hpp  MockDatabase.cpp  OrderEngine.hpp  OrderFactory.cpp  ParseOptions.hpp  Portfolio.cpp  Portfolio.hpp  PyDatabase.py  PyPortfolio.cpp  PyStrategy.py  QTypes.hpp  README.md  main.cpp
Database/: CMakeLists.txt  CassandraDatabase.cpp  CassandraDatabase.hpp  Database.cpp  Database.hpp  MockDatabase.hpp  table.csv
OrderEngine/: CMakeLists.txt  OrderEngine.cpp  OrderEngine.hpp
OrderFactory/: CMakeLists.txt  OrderFactory.cpp  OrderFactory.hpp
OrderFunction/: CMakeLists.txt  OrderFunction.cpp  OrderFunction.hpp
Portfolio/: CMakeLists.txt  Portfolio.cpp  Portfolio.hpp
Portfolio/UnitTest/: PortfolioTest.cpp
PythonInterpreter/: CMakeLists.txt  PythonInterpreter.cpp  PythonInterpreter.hpp
SlippageFunction/: CMakeLists.txt  SlippageFunction.cpp  SlippageFunction.hpp
StrategyEvaluator/: CMakeLists.txt  OrderFunction.cpp  OrderFunction.hpp  StrategyEvaluator.cpp  StrategyEvaluator.hpp
python/: Makefile  main.c  pytest.py
